fixed not working home button

--- a/computersci.html
+++ b/computersci.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#">arthuwu</a>
+        <a href="/">arthuwu</a>
         <a href="computersci.html">Computer Science</a>
     </nav>
     <div class="content">
