--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/index.html">arthuwu</a>
+        <a href="/">arthuwu</a>
         <a href="/computersci.html">Computer Science</a>
     </nav>
     <div class="homepg">
