--- a/paperone.html
+++ b/paperone.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/">arthuwu</a>
-        <a href="computersci.html">Computer Science</a>
+        <a href="/index.html">arthuwu</a>
+        <a href="/computersci.html">Computer Science</a>
     </nav>
     <div class="flex-container-double content">
         <div class="kontent">  
