updated div spacing

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
         <a href="/">arthuwu</a>
         <a href="/computersci.html">Computer Science</a>
     </nav>
-    <div class="homepg">
-        <p class="typed">Hi! Welcome to my <span class="strike">page</span>!</p>
-    </div>
-    <div class="subtxt">   
-        <p class="typednoblink delay1">(aka my excuse to learn HTML and CSS)</p>
-    </div>
-    <div class="subtxt">
-        <p class="typednoblink delay2">(and also to make notes)</p>
-    </div>
-    <div class="flex-container margin50">
-        <a href="../computersci.html"class="largebutton fadein">GCSE Computer Science Notes</a>
+    <div>
+        <div class="homepg">
+            <p class="typed">Hi! Welcome to my <span class="strike">page</span>!</p>
+        </div>
+        <div class="subtxt">   
+            <p class="typednoblink delay1">(aka my excuse to learn HTML and CSS)</p>
+        </div>
+        <div class="subtxt">
+            <p class="typednoblink delay2">(and also to make notes)</p>
+        </div>
+        <div class="flex-container margin50">
+            <a href="../computersci.html"class="largebutton fadein">GCSE Computer Science Notes</a>
+        </div>
     </div>
 </body>
 </html>
