Added "interesting" dropdown, Updated content up to 1.2.2
The dropdown doesn't really work rn and i cba to fix it just yet

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>arthuwu</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
     <nav class="navbar">
         <a href="/">arthuwu</a>
-        <a href="/computersci.html">Computer Science</a>
+        <div class="dropdown">
+            <a class="dropdown" href="/computersci.html">Computer Science</a>
+            <div class="dropdown-content">
+                <a href="/paperone.html">Paper 1 (Computer Systems)</a>
+            </div>
+        </div>
     </nav>
     <div>
         <div class="homepg">
