--- a/computersci.html
+++ b/computersci.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OCR GCSE Computer Science</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
     <nav class="navbar">
         <a href="/">arthuwu</a>
-        <a href="computersci.html">Computer Science</a>
+        <div class="dropdown">
+            <a class="dropdown" href="/computersci.html">Computer Science</a>
+            <div class="dropdown-content">
+                <a href="/paperone.html">Paper 1 (Computer Systems)</a>
+            </div>
+        </div>
     </nav>
     <div class="content">
         <h1>GCSE OCR Computer Science (J277) Notes</h1>
         <p class = kontent>These notes are written for the OCR J277 (2020) Computer Science specification.<br>
             There are <strong>2 papers</strong>:</p>
-            <ul>
+            <ul class = "kontent">
                 <li>J277/01 - Computer Systems</li>
                 <li>J277/02 - Computational thinking, algorithms and programming</li>
             </ul>
@@ -29,4 +34,4 @@
         <a href="#"class="largebutton nofade marginleft notinuse">Paper 2 coming soon</a>
     </div>
 </body>
-</html>
+</html> 
