Fixed dropdown navbar, updated content to 1.2.4

--- a/computersci.html
+++ b/computersci.html
@@ -12,11 +12,12 @@
     <nav class="navbar">
         <a href="/">arthuwu</a>
         <div class="dropdown">
-            <a class="dropdown" href="/computersci.html">Computer Science</a>
+            <a href="/computersci.html">Computer Science</a>
             <div class="dropdown-content">
                 <a href="/paperone.html">Paper 1 (Computer Systems)</a>
             </div>
         </div>
+    </nav>
     </nav>
     <div class="content">
         <h1>GCSE OCR Computer Science (J277) Notes</h1>
