--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <a href="/">arthuwu</a>
         <div class="dropdown">
-            <a class="dropdown" href="/computersci.html">Computer Science</a>
+            <a href="/computersci.html">Computer Science</a>
             <div class="dropdown-content">
                 <a href="/paperone.html">Paper 1 (Computer Systems)</a>
             </div>
@@ -21,7 +21,7 @@
     <div>
         <div class="homepg">
             <p class="typed">Hi! Welcome to my <span class="strike">page</span>!</p>
-        </div>
+        </div> 
         <div class="subtxt">   
             <p class="typednoblink delay1">(aka my excuse to learn HTML and CSS)</p>
         </div>
