--- a/paperone.html
+++ b/paperone.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OCR J277 Paper 1</title>
+    <title>GCSE | Computer Science Paper 1</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
@@ -1262,7 +1262,7 @@
             <li><strong>Run-length Encoding (RLE)</strong>
             <ul>
             <li>Stores “patterns” of repeating data</li>
-            <li>e.g. 1,0,0,0,1,1,1,1,1,0,0,1 becomes 1, 3<em>0, 5</em>1, 2*0, 1</li>
+            <li>e.g. 1,0,0,0,1,1,1,1,1,0,0,1 becomes 1, 3 x 0, 5 x 1, 2 x 0, 1</li>
             </ul>
             </li>
             </ul>
