formatted code, updated 1.2.5

--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>arthuwu | homepage</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter"
+    />
+  </head>
+  <body>
     <nav class="navbar">
-        <a href="/">arthuwu</a>
-        <div class="dropdown">
-            <a href="/computersci.html">Computer Science</a>
-            <div class="dropdown-content">
-                <a href="/paperone.html">Paper 1 (Computer Systems)</a>
-            </div>
+      <a href="/">arthuwu</a>
+      <div class="dropdown">
+        <a href="/computersci.html">Computer Science</a>
+        <div class="dropdown-content">
+          <a href="/paperone.html">Paper 1 (Computer Systems)</a>
         </div>
+      </div>
     </nav>
     <div>
-        <div class="homepg">
-            <p class="typed">Hi! Welcome to my <span class="strike">page</span>!</p>
-        </div> 
-        <div class="subtxt">   
-            <p class="typednoblink delay1">(aka my excuse to learn HTML and CSS)</p>
-        </div>
-        <div class="subtxt">
-            <p class="typednoblink delay2">(and also to make notes)</p>
-        </div>
-        <div class="flex-container margin50">
-            <a href="../computersci.html"class="largebutton fadein">GCSE Computer Science Notes</a>
-        </div>
+      <div class="homepg">
+        <p class="typed">Hi! Welcome to my <span class="strike">page</span>!</p>
+      </div>
+      <div class="subtxt">
+        <p class="typednoblink delay1">(aka my excuse to learn HTML and CSS)</p>
+      </div>
+      <div class="subtxt">
+        <p class="typednoblink delay2">(and also to make notes)</p>
+      </div>
+      <div class="flex-container margin50">
+        <a href="../computersci.html" class="largebutton fadein"
+          >GCSE Computer Science Notes</a
+        >
+      </div>
     </div>
-</body>
+  </body>
 </html>
