adjusted font size and weight

--- a/paperone.html
+++ b/paperone.html
@@ -39,9 +39,7 @@
           <li>to processss <strong>data</strong></li>
           <li>to carry out <strong>instructions</strong></li>
         </ul>
-        <h3 id="von-neumann-architecture">
-          <strong>Von-Neumann Architecture</strong>
-        </h3>
+        <h3 id="von-neumann-architecture">Von-Neumann Architecture</h3>
         <blockquote>
           <p>In GCSE, you do not need to know about other CPU architecture.</p>
         </blockquote>
@@ -248,9 +246,7 @@
             </ul>
           </li>
         </ul>
-        <h3 id="fetch-decode-execute-cycle">
-          <strong>Fetch-Decode-Execute cycle</strong>
-        </h3>
+        <h3 id="fetch-decode-execute-cycle">Fetch-Decode-Execute cycle</h3>
         <p>
           The fetch-decode-execute cycle is the
           <strong>sequence of operations</strong> that are completed by a
@@ -452,7 +448,7 @@
           <strong>Random Access Memory (RAM)</strong> and
           <strong>Read-only Memory (ROM)</strong>.
         </p>
-        <h3 id="random-access-memory"><strong>Random Access Memory</strong></h3>
+        <h3 id="random-access-memory">Random Access Memory</h3>
         <ul>
           <li>
             Used to hold <strong>data and instructions currently in use</strong>
@@ -478,7 +474,7 @@
             higher capacity
           </p>
         </blockquote>
-        <h3 id="read-only-memory"><strong>Read-only Memory</strong></h3>
+        <h3 id="read-only-memory">Read-only Memory</h3>
         <ul>
           <li>
             Used to hold
@@ -501,7 +497,7 @@
             common.
           </p>
         </blockquote>
-        <h3 id="virtual-memory"><strong>Virtual Memory</strong></h3>
+        <h3 id="virtual-memory">Virtual Memory</h3>
         <ul>
           <li>
             Virtual memory is the
